Lots of changes
The handsOff and handsOn methods are now distinct Code objects, like in LSL6.

The arrow cursor is now a distinct object, as is required in SCI32.

If an argument is given in restart: the game now restarts immediately without the dialog, for things like death messages.

The pragmaFail: method and doVerb code have been simplified.

The icon bar initializes with Walk as the selected icon.

Ego is normalized at startRoom:, ensuring he's always normalized at the start of every room.

GameInit now initializes text font and color codes for messages.

--- a/game.ini
+++ b/game.ini
@@ -1,9 +1,10 @@
 [Game]
 Language=sci
 DosBoxCmdLineParameters=SIERRA.EXE -conf "C:\SCICompanion\Tools\dosbox.conf" -noconsole
-ExeProfile=DOSBox
+ExeProfile=Other
 Name=SCI1.1 Template Redux
 SaveToPatchFiles=false
+Executable=RUN.EXE
 [Script]
 n004=SpeedTest
 n005=Controls
