Made game's inventory an actual instance
The game-specific inventory is now an actual instance, and the code has been simplified a bit.

--- a/game.ini
+++ b/game.ini
@@ -105,7 +105,7 @@ n997=vHandCursor
 n000=vEgo
 n980=vWalkIcon
 n004=vTestBlock
-n900=vInvMoney
+n900=vInvItems
 n981=vLookIcon
 n982=vDoIcon
 n983=vTalkIcon
