In sync with SCI1.0 template

--- a/game.ini
+++ b/game.ini
@@ -7,15 +7,15 @@ SaveToPatchFiles=false
 Executable=RUN.EXE
 [Script]
 n004=SpeedTest
-n005=Controls
-n110=TestRoom
+n005=GameControls
+n110=rTestRoom
 n937=IconBar
 n945=PolyPath
 n000=Main
 n935=Scaler
 n002=DoDisp
 n942=MoveCyc
-n100=Title
+n100=rTitle
 n963=RelDPath
 n933=PMouse
 n953=Approach
@@ -96,7 +96,8 @@ n001=GameWindow
 n003=GameRoom
 n013=WhereTo
 n014=DisposeCode
-n101=Room101
+n015=Procs
+n016=ColorInit
 [View]
 n2099=vDeathButtons
 n2000=vDeathSkull
@@ -105,7 +106,7 @@ n997=vHandCursor
 n000=vEgo
 n980=vWalkIcon
 n004=vTestBlock
-n900=vInvItems
+n900=vIcons
 n981=vLookIcon
 n982=vDoIcon
 n983=vTalkIcon
@@ -113,12 +114,23 @@ n989=vHelpIcon
 n990=vIconBar
 n991=vInvIcons
 n995=vControlIcons
-n001=vBox
+n001=vEgoStand
 n996=vInvisCursor
+n1026=vGameControlsGerman
+n1040=vGameControlsSpanish
+n1051=vGameControlsFrench
+n947=vGameControls
+n700=vInvItems
+n099=vSpeedTest
+n800=vDeathSkull
+n901=vInvIcons
 [Pic]
 n101=pRoom101
 n100=pTitle
+n099=pBlack
 [Sound]
 n950=sPoints
 n010=sDeath
+n002=sDeath
+n003=sScore
 [Palette]
