Inventory is now SQ5-style again
It seems Space Quest V's inventory is the best way to handle multiple pages of inventory items. Good thing I had the necessary classes fully decompiled.

--- a/game.ini
+++ b/game.ini
@@ -98,6 +98,8 @@ n013=WhereTo
 n014=DisposeCode
 n015=Procs
 n016=ColorInit
+n017=ScrollableInventory
+n018=ScrollInset
 [View]
 n2099=vDeathButtons
 n2000=vDeathSkull
